fix: changed layout to improve readability

--- a/app/variables.scss
+++ b/app/variables.scss
@@ -2,6 +2,6 @@ $primary-color: #FFC82F;
 $accent-color: #FFC82F;
 $dark-color: #032332;
 $disabled-color: #404040;
-$actionbar-button-height: 50;
+$actionbar-button-height: 48;
 $actionbar-height: 60;
 $shon: #43b4e0;
